<resources>
    <string name="app_name">FindUrDiet</string>
    <string name="preferences">com.example.api.PREFERENCE_KEY</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="cuenta">Cuenta</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="tag_etiquetas">Tag/Etiquetas</string>
    <string name="premium">Premium</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="reservas">Reservas</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>